--- a/XCode/DewertOkin/DewertOkin/RemoteControl/ExtraFunctionsController/NewExtraFunctions.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/ExtraFunctionsController/NewExtraFunctions.storyboard
@@ -33,6 +33,9 @@
                                                 <state key="normal" title="discover accessorize">
                                                     <color key="titleColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="exploreButtonAction:" destination="sxl-o5-2Q5" eventType="touchUpInside" id="ypb-2d-BGE"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your device currently has no additional functionallity. You can discover accessories in the Explore tab. " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="evR-6t-PgT">
                                                 <rect key="frame" x="50" y="400" width="314" height="61"/>
